<resources>
    <string name="app_name">SKID</string>
    <string name="welcome">Welcome to</string>
    <string name="skid">SkiD</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="cont">Continue</string>
    <string name="default_string">default</string>
    <string name="create">Create an Account</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="hello">Hello</string>
    <string name="me">Leynnnnnn!</string>
    <string name="what">What are you sending today?</string>
    <string name="food">Food Delivery</string>
    <string name="weight">(less than 10 kg)</string>
    <string name="cancel"><u>Cancel Order</u></string>
    <string name="about_package">What is in the package?</string>
    <string name="about">About Item</string>
    <string name="additional">Additional Note (Optional)</string>
    <string name="next">Next</string>
    <string name="complete_address">Complete Address</string>
    <string name="pick_up">Pick-up Location</string>
    <string name="drop_off">Drop-off Location</string>


</resources>