<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">


    <LinearLayout
        android:layout_width="331dp"
        android:layout_height="651dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/default_string"
            app:srcCompat="@drawable/skid_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/span_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/skid"
            android:textAlignment="center"
            android:textColor="@color/font_color"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="username"
                android:background="@drawable/inputs_border_radius"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"

                android:hint="@string/enter_username"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:layout_margin="5dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/inputs_border_radius"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"

                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/password"
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/inputs_border_radius"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/font_color"
                android:textSize="12sp" />

            <Button
                android:id="@+id/addNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/primary_color"
                android:background="@drawable/inputs_border_radius"
                android:text="@string/cont" />


        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>