<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemInfo">

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="691dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/cancel"
            android:textColor="@color/font_color"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:layout_marginTop="10dp"
            android:textColor="@color/font_color"
            android:textSize="25sp"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/about_package"
            android:textColor="@color/span_color"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"
            />
        <include
            android:layout_width="match_parent"
            layout="@layout/edit_text_layout"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/additional"
            android:layout_marginTop="30dp"
            android:textColor="@color/span_color"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/font_color"
            android:background="@drawable/inputs_border_radius"/>

        <Button
            android:id="@+id/toLocationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary_color"
            android:background="@drawable/inputs_border_radius"
            android:layout_marginTop="85dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>