<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Location" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/cancel"
        android:textAlignment="textEnd"
        android:textColor="@color/font_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="412dp"
        android:layout_height="100dp"
        android:layout_marginTop="22dp"
        android:background="@color/light_green"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/homepage_image" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="464dp"
        android:orientation="vertical"
        app:barrierMargin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/location" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Where is the package\nbeing delivered?"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/drop_off"
            android:textColor="@color/span_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/dropOffLocation"
            layout="@layout/edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="371dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/location" />

            <TextView
                android:id="@+id/textView11fd"
                android:layout_width="wrap_content"
                android:layout_height="54dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Where is the package\nbeing picked up?"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/pick_up"
            android:textColor="@color/span_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <include
            android:id="@+id/pickUpLocation"
            layout="@layout/edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <Button
            android:id="@+id/toVehicleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/inputs_border_radius"
            android:backgroundTint="@color/primary_color"
            android:text="@string/next"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



